Fix alignment on calendar

--- a/src/Components/Collective/Calendar_Dashboard/calendar_dashboard.css
+++ b/src/Components/Collective/Calendar_Dashboard/calendar_dashboard.css
@@ -18,7 +18,7 @@
 	font-size: 1.5vw;
 }
 .day-block-expanded{
-	margin-top: 2vh;
+	margin-top: 1.6vh;
 }
 .inner-container-for-calendar-expanded{
 	transition: 0.2s;
